--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,11 +5,15 @@
   justify-content: center;
   padding: 90px 0 85px 0;
   background-color: variables.$primary-color;
-  background-image: url("../img/into-background-long.jpg");
+  background-image: url("../img/intro/back-mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover; //320px 389px;
   background-position: center bottom;
   position: relative;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/intro/back-mobile@2x.jpg");
+  }
 
   &::after {
     content: "";
@@ -26,6 +30,11 @@
 
   @media (min-width: variables.$tablet-width) {
     padding: 77px 0 91px 0;
+    background-image: url("../img/intro/back-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/intro/back-desktop@2x.jpg");
+    }
   }
 
   @media (min-width: variables.$desktop-width) {
