--- a/6/css/style.css
+++ b/6/css/style.css
@@ -1350,6 +1350,70 @@ img {
   }
 }
 
+.map__image {
+  display: none;
+}
+
+.map__image--nojs {
+  display: block;
+}
+
+.map__frame {
+  display: block;
+  width: 100%;
+  height: 350px;
+  position: relative;
+}
+.map__frame::before {
+  position: absolute;
+  content: "";
+  width: 27px;
+  height: 27px;
+  background-color: #ffffff;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  border-radius: 50%;
+  z-index: 1;
+}
+.map__frame::after {
+  position: absolute;
+  content: "";
+  width: 17px;
+  height: 17px;
+  background-color: #81b3d2;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.map__frame--nojs {
+  display: none;
+}
+
+.map__iframe {
+  position: relative;
+  display: block;
+  border: 0;
+  width: 100%;
+  height: 350px;
+  background-image: url("../img/map/map-desktop-beckground-frame.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .map__iframe {
+    background-image: url("../img/map/map-desktop-beckground-frame@2x.jpg");
+  }
+}
+
 .map__photo {
   display: block;
   position: relative;
