--- a/source/sass/blocks/notification.scss
+++ b/source/sass/blocks/notification.scss
@@ -26,7 +26,7 @@
 .notification--error {
   display: none;
 
-  .notification__wrapper {
+  .notification__text-block {
     width: 320px;
     padding: 45px 42px 35px 41px;
 
@@ -64,7 +64,7 @@
 .notification--success {
   display: none;
 
-  .notification__wrapper {
+  .notification__text-block {
     width: 320px;
     padding: 39px 39px 0 37px;
 
