--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -13,6 +13,7 @@ $darken-grey-color: #e6e6e6;
 $color-field: #f2f2f2;
 $color-delimetr: #dbdbdb;
 $menu-current-color: #766357;
+$controls-focus-color: #d5d5d5;
 
 /* resolutions */
 $tablet-width: 768px;
