--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -23,7 +23,7 @@
       width: 100%;
       height: 37px;
       background-image: url("../img/advanteges-triangle-mobile.svg");
-      background-color: #81b3d2;
+      background-color: variables.$primary-color;
       background-size: 100% 37px;
     }
   }
