--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -7,7 +7,7 @@
   background-color: variables.$primary-color;
   background-image: url("../img/intro/back-mobile.jpg");
   background-repeat: no-repeat;
-  background-size: cover; //320px 389px;
+  background-size: 902px 389px;
   background-position: center bottom;
   position: relative;
 
@@ -23,13 +23,14 @@
     bottom: 0;
     width: 100%;
     height: 57px;
-    background-image: url("../img/intro-triangle-mobile.svg");
+    background-image: url("../img/intro-triangle.svg");
     background-repeat: no-repeat;
     background-size: 100% 57px;
   }
 
   @media (min-width: variables.$tablet-width) {
     padding: 77px 0 91px 0;
+    background-size: cover;
     background-image: url("../img/intro/back-desktop.jpg");
 
     @media (min-resolution: 2dppx) {
@@ -89,7 +90,7 @@
   }
 
   @media (min-width: variables.$tablet-width) {
-    padding: 47.5px 0 56.5px;
+    padding: 47px 0 56px;
   }
 
   @media (min-width: variables.$desktop-width) {
@@ -105,6 +106,7 @@
 
     @media (min-width: variables.$tablet-width) {
       padding: 151px 0 117px 0;
+      background-size: 1200px 518px;
     }
 
     @media (min-width: variables.$desktop-width) {
