--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -54,7 +54,7 @@
       color: variables.$primary-hover-color;
     }
 
-    .main-footer__copyright-logo path {
+    .main-footer__copyright-logo {
       fill: variables.$primary-hover-color;
     }
   }
@@ -66,7 +66,7 @@
       color: variables.$copyright-color-active;
     }
 
-    .main-footer__copyright-logo path {
+    .main-footer__copyright-logo {
       fill: variables.$copyright-color-active;
     }
   }
