--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -22,6 +22,7 @@
   display: block;
   width: 100%;
   height: 350px;
+  background-color: variables.$basic-gray;
   position: relative;
 
   &::before {
