--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -19,13 +19,14 @@
     content: "";
     position: absolute;
     z-index: 10;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 0;
     width: 100%;
     height: 57px;
     background-image: url("../img/intro-triangle.svg");
     background-repeat: no-repeat;
-    background-size: 100% 57px;
+    background-position: center bottom;
   }
 
   @media (min-width: variables.$tablet-width) {
