--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -16,13 +16,6 @@
 
 .map__image--nojs {
   display: block;
-}
-
-.map__frame {
-  display: block;
-  width: 100%;
-  height: 350px;
-  background-color: variables.$basic-gray;
   position: relative;
 
   &::before {
@@ -56,6 +49,14 @@
   }
 }
 
+.map__frame {
+  display: block;
+  width: 100%;
+  height: 350px;
+  background-color: variables.$basic-gray;
+  position: relative;
+}
+
 .map__frame--nojs {
   display: none;
 }
@@ -66,13 +67,13 @@
   border: 0;
   width: 100%;
   height: 350px;
-  background-image: url("../img/map/map-desktop-beckground-frame.jpg");
+  background-image: url("../img/map/map-desktop.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../img/map/map-desktop-beckground-frame@2x.jpg");
+    background-image: url("../img/map/map-desktop@2x.jpg");
   }
 }
 
