--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -121,21 +121,21 @@
   &::before {
     content: "";
     position: absolute;
-    left: 0;
+    left: 4px;
     top: -9px;
-    width: 40px;
-    height: 40px;
+    width: 32px;
+    height: 38px;
     background-image: url("../img/icon-gift.svg");
     background-repeat: no-repeat;
-    background-size: 40px 40px;
+    background-size: 32px 38px;
 
     @media (min-width: variables.$tablet-width) {
       left: 50%;
       transform: translateX(-50%);
-      top: 62px;
-      width: 82px;
+      top: 63px;
+      width: 66px;
       height: 75px;
-      background-size: 88px 75px;
+      background-size: 66px 75px;
     }
 
     @media (min-width: variables.$desktop-width) {
