--- a/source/sass/blocks/advatage.scss
+++ b/source/sass/blocks/advatage.scss
@@ -59,7 +59,6 @@
   object-fit: cover;
 
   @media (min-width: variables.$tablet-width) {
-    //grid-column: 2/-1;
     height: 256px;
   }
 }
@@ -162,7 +161,7 @@
 
 .advantage--last {
   padding-bottom: 28px;
-  padding-top: 26px; //без этого паддинга почему-то вообще не встаёт
+  padding-top: 26px;
 
   @media (min-width: variables.$tablet-width) {
     padding: 41px 33px;
