--- a/source/sass/blocks/photo-card.scss
+++ b/source/sass/blocks/photo-card.scss
@@ -56,6 +56,7 @@
 
   @media (min-width: variables.$tablet-width) {
     margin: 0;
+    margin-bottom: 10px;
   }
 
   @media (min-width: variables.$desktop-width) {
